--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # ignore trained model directory
 /arc_model*/
 /gpt*/
+# ignore plots directory
+/plots/
 # ignore __pycache__ directory
 __pycache__/
